Improved class file import, where JAR entries (like /java/io) are missing from JAR files. By adding a ClassFileSource for each single class (e.g. jar:file://some.jar!/concrete/Clazz.class), instead of one ClassFileSource per path, the same JAR file had to be opened again and again, wasting performance. Now we just look, if there is a matching entry in the JAR (e.g. import '/java/io' -> rt.jar contains '/java/io/File.class' but not '/java/io' -> import rt.jar with one single ClassFileSource, selecting all JarEntries beneath '/java/io').